fix: resolve the apk build